$Id$

2004-04-17 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/pop3/pop3.c: Don't connect twice to the same
          server.
        * src/plugins/maildir/maildir.c: Added timer-based checking
          to support systems that don't have dnotify.
        * src/embrace.c, src/plugins/pop3/pop3.c,
          src/plugins/imap/imap.c, src/plugins/mbox/mbox.c,
          src/plugins/maildir/maildir.c:
          Finally Embrace will tell you when a mailbox cannot be
          loaded due to configuration errors.
        * src/mailbox.[ch]: mailbox_is_checking_set() now takes a bool
          and emits MAILBOX_UNSET_CHECKING if the mailbox has been
          checked.
        * src/plugins/pop3/pop3.c, src/plugins/imap/imap.c:
          Fixed ecore event handling

2004-04-09 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/pop3/pop3.c: The POP3 plugin will now tell you
          about connection problems. ERR messages from the server will
          be put out stderr now.
        * src/embrace.c: Added support for the Esmart Trans object

2004-04-04 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/maildir/maildir.c:
          Use Ecore's realtime signal events instead of
          our own (buggy) signal code

2004-04-01 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/main.c, src/embrace.[ch]:
          Restart Embrace on SIGHUP

2004-03-31 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/pop3/pop3.c, src/plugins/imap/imap.c:
          The IMAP and POP3 plugin now use SSL-encrypted connections
          if possible

2004-03-16 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * configure.ac, src/plugins/imap:
          Added Justin Rocha's IMAP plugin